# INCS101-Project-V2

./: .gitignore  CMakeLists.txt  README.md
core/: BonusCard.cpp  BonusCard.h  CMakeLists.txt  Card.cpp  Card.h  Deck.cpp  Deck.h  Game.cpp  Game.h  GameSnapshot.h  PenaltyCard.cpp  PenaltyCard.h  Player.cpp  Player.h  StandardCard.cpp  StandardCard.h
docs/: ARCHITECTURE.md
docs/diagrams/: class_diagram.mermaid  evaluate_flipped_cards_flowchart.mermaid  game_phase_state_diagram.mermaid  gui_class_diagram.mermaid  seq_two_bonus.mermaid  seq_two_different_standard.mermaid  seq_two_penalty.mermaid  seq_two_same_standard.mermaid
gui/: CMakeLists.txt  CardButton.cpp  CardButton.h  EndScreen.cpp  EndScreen.h  GameScreen.cpp  GameScreen.h  MainWindow.cpp  MainWindow.h  StartScreen.cpp  StartScreen.h  main.cpp
tests/: CMakeLists.txt
